pandoc-tablenos 2.2.1 (2020-07-31)

    * Require pandoc-xnos 2.4.2 (bug fix release).
    * Fixed processing of tables for pandoc 2.10.


pandoc-tablenos 2.2.0 (2020-07-30)

    * Updated to work with pandoc 2.10.
    * Fixed table number reset problem for html, docx (Issue #17).


pandoc-tablenos 2.1.1 (2019-09-26)

    * Warns about duplicate reference targets.


pandoc-tablenos 2.0.0 (2019-09-17)

    * A warnings system has been added.
    * Meta variable names have been updated.
    * TeX codes have been completely overhauled.
    * Html/epub tables are now enclosed in a `<div>`.
    * Epub support is generally improved.
    * Support section number offsets in table numbers
      (pandoc-fignos Issue #47).
    * Support for disabling links on selected references
      (pandoc-fignos Issue #54).
    * Support for custom caption separators (pandoc-fignos Issue #67).
    * Better handling of missing references.
    * Changed `tablenos-number-sections` and `xnos-number-sections`
      options to `tablenos-number-by-section` and
      `xnos-number-by-section`


pandoc-tablenos 1.4.2 (2019-05-17)

    * Support epub2 and epub3 targets; use id tag (Issue #13).


pandoc-tablenos 1.4.1 (2019-05-16)

    * Fixed links in epub output (pandoc-eqnos Issue #37).
    * Bug fix for table numbering by section for docx
      (pandoc-fignos Issue #58).
    * Can now use `pandoc-fignos --version` to get verson.


pandoc-tablenos 1.4.0 (2019-05-15)

    * Support for references in bracketed spans (pandoc-fignos
      Issue #58).


pandoc-tablenos 1.3.2 (2019-05-15)

    * Enabled table numbering by section for docx (addresses
      pandoc-fignos Issue #59).


pandoc-tablenos 1.3.1 (2019-05-08)

    * Maintenance release for pandoc 2.7.2.


pandoc-tablenos 1.3.0 (2018-08-09)

    * Require pandoc-xnos>=1.1,<2 to ensure API compatibility
      (pandoc-fignos Issue #46).
    * Gives more helpful error message regarding acceptable