@@ -1,3 +1,9 @@
+pandoc-tablenos 2.X.X (unreleased)
+
+    * Use nonbreaking space between ref name and number in caption
+      (pandoc-xnos Issue #14).
+
+
 pandoc-tablenos 2.2.1 (2020-07-31)
 
     * Require pandoc-xnos 2.4.2 (bug fix release).
